Ya no hay problema al presionar sobre un horario en el calendario semanal en dispositivos moviles

--- a/complejoapp/css/sb-admin.css
+++ b/complejoapp/css/sb-admin.css
@@ -4,6 +4,18 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+
+/*
+ * Estilos arreglados para el calendario semanal
+ */
+.ec-day-header {
+    overflow: hidden; 
+}
+
+.ec-event {
+    overflow: hidden;
+}
+
 /* Global Styles */
 
 body {
