los usuarios pueden buscar canchas por nombre de complejo y nombre de disciplina

--- a/complejoapp/css/agency.css
+++ b/complejoapp/css/agency.css
@@ -421,3 +421,28 @@ section h3.section-subheading {
         padding:0 100px 20px 20px
     }
 }
+
+/* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
+
+.business-header {
+    height: 250px;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+/* Customize the text color and shadow color and to optimize text legibility. */
+
+.tagline {
+    text-shadow: 0 0 10px #000;
+    color: #fff;
+}
+
+.img-center {
+    margin: 0 auto;
+}
+
+footer {
+    margin: 50px 0;
+}
